# BreakoutGame

./: .gitmodules  CMakeLists.txt  Doxyfile  main.cpp
breakoutGame/: breakout_game.cpp  breakout_game.h
docs/html/: annotated.html  annotated_dup.js  bagel_8h_source.html  bagel__cfg_8h_source.html  breakout__game_8cpp.html  breakout__game_8cpp.js  breakout__game_8h.html  breakout__game_8h.js  breakout__game_8h_source.html  classbagel_1_1_dynamic_bag-members.html  classbagel_1_1_dynamic_bag.html  classbagel_1_1_entity-members.html  classbagel_1_1_entity.html  classbagel_1_1_mask_builder-members.html  classbagel_1_1_mask_builder.html  classbagel_1_1_multi_mask-members.html  classbagel_1_1_multi_mask.html  classbagel_1_1_no_instance-members.html  classbagel_1_1_no_instance.html  classbagel_1_1_packed_storage-members.html  classbagel_1_1_packed_storage.html  classbagel_1_1_single_mask-members.html  classbagel_1_1_single_mask.html  classbagel_1_1_sparse_storage-members.html  classbagel_1_1_sparse_storage.html  classbagel_1_1_static_bag-members.html  classbagel_1_1_static_bag.html  classbagel_1_1_storage_register-members.html  classbagel_1_1_storage_register.html  classbagel_1_1_tagged_storage-members.html  classbagel_1_1_tagged_storage.html  classbagel_1_1_world-members.html  classbagel_1_1_world.html  classes.html  dir_78c1b5bb60919b971188ab9eebac0943.html  dir_78c1b5bb60919b971188ab9eebac0943.js  dir_996f45160da62e1a3d7f6046fad68f51.html  dir_996f45160da62e1a3d7f6046fad68f51.js  doxygen_crawl.html  files.html  (+54 more)
docs/html/search/: all_0.js  all_1.js  all_11.js  all_12.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_a.js  all_c.js  all_d.js  all_e.js  classes_1.js  classes_2.js  classes_3.js  classes_5.js  classes_6.js  classes_8.js  classes_9.js  classes_a.js  classes_b.js  files_0.js  functions_0.js  functions_1.js  functions_2.js  functions_3.js  searchdata.js  variables_0.js  variables_3.js  variables_4.js  (+3 more)
docs/latex/: annotated.tex  bagel_8h_source.tex  bagel__cfg_8h_source.tex  breakout__game_8cpp.tex  breakout__game_8h.tex  breakout__game_8h_source.tex  classbagel_1_1_dynamic_bag.eps  classbagel_1_1_dynamic_bag.tex  classbagel_1_1_entity.tex  classbagel_1_1_mask_builder.tex  classbagel_1_1_multi_mask.tex  classbagel_1_1_no_instance.eps  classbagel_1_1_no_instance.tex  classbagel_1_1_packed_storage.eps  classbagel_1_1_packed_storage.tex  classbagel_1_1_single_mask.tex  classbagel_1_1_sparse_storage.eps  classbagel_1_1_sparse_storage.tex  classbagel_1_1_static_bag.tex  classbagel_1_1_storage_register.tex  classbagel_1_1_tagged_storage.eps  classbagel_1_1_tagged_storage.tex  classbagel_1_1_world.eps  classbagel_1_1_world.tex  files.tex  hierarchy.tex  refman.tex  structbagel_1_1_added_mask.tex  structbagel_1_1_bagel.tex  structbagel_1_1_component.eps  structbagel_1_1_component.tex  structbagel_1_1_no_copy.eps  structbagel_1_1_no_copy.tex  structbagel_1_1_storage.eps  structbagel_1_1_storage.tex  structbagel_1_1_storage_callbacks.tex  structbagel_1_1ent__type.tex  structbreakout_1_1_ball_tag.tex  structbreakout_1_1_brick_health.tex  structbreakout_1_1_collider.tex  (+9 more)
engine/: bagel_cfg.h
libs/box2d-3.1.0/: CMakeLists.txt
(+6 files in other folders)
